[package]
name = "monitor-ipv6"
version = "1.2.3"
edition = "2021"

[dependencies]
log = "0.4.20"
simple_logger = "4.3.3"
get_if_addrs = "0.5.3"
clap = { version = "4.4.12", features = ["derive", "env"] }
dbus = "0.9.7"

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
